--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2>Site Name</h2>
         <p>Beyond Sunny Days</p>
         <h2>Site Domain</h2>
-        <img src= "images/domain.png" alt= "information about domain">
+        <img class="domainimg" src= "images/domain.png" alt= "information about domain">
         <h2>Site Purpose</h2>
         <p>Our main purpose is to help you to start your day well inform with wheather, and news for the communities in Preston, Soda Spring, and Fish Haven. 
         We know your necesities, and we want to serve you daily.</p>
