changes in images

--- a/audience.html
+++ b/audience.html
@@ -59,9 +59,10 @@
         <!--<img src= "images/domain.png" alt= "information about domain">-->
         <p>start your day well inform with wheather, and news for the communities in Preston, Soda Spring, and Fish Haven. 
         We know your necesities, and we want to serve you daily.</p>
-        <h2>Scenarios</h2>
-        <p>1.- fasdkjfslkfjsfkjsfkjsal</p>
-        <p>2.- flskadfskflsfkslfksldfksflksflksf</p>
+        <h3>1) Scenario</h3>
+        <p>fasdkjfslkfjsfkjsfkjsal</p>
+        <h3>2) Scenario</h3>
+        <p>flskadfskflsfkslfksldfksflksflksf</p>
         
     </main>
     
