--- a/colors.html
+++ b/colors.html
@@ -50,9 +50,10 @@
 <!-- CONTENT HERE -->
     <main>
         <h2>Color Scheme</h2>
-        <p>The color I choose are the following</p>
+        <p>The color I choose are the following:</p>
         <img src= "images/colorScheme.png" alt= "color chart">
-        <p> I will used in the int this way:</p>
+        <p>I will used them in:</p>
+        <img src= "images/color-chart.png" alt= "table for colors">
         
     </main>
     
