--- a/colors.html
+++ b/colors.html
@@ -51,9 +51,9 @@
     <main>
         <h2>Color Scheme</h2>
         <p>The color I choose are the following:</p>
-        <img src= "images/colorScheme.png" alt= "color chart">
+        <img class="color1" src= "images/colorScheme.png" alt= "color chart">
         <p>I will used them in:</p>
-        <img src= "images/color-chart.png" alt= "table for colors">
+        <img class="color2" src= "images/color-chart.png" alt= "table for colors">
         
     </main>
     
