--- a/audience.html
+++ b/audience.html
@@ -50,15 +50,13 @@
 <!-- CONTENT HERE -->
     <main>
         <h2>Target Audience</h2>
-        <p>fksflsflfklsf;sflks;lfksl;fkslfksdlfksdflsdfl;</p>
+        <p>We want to reach users of all stratum, gender, and ages from 12 to 85+ years old.  From students to busy parents, informal workers to office employees. Everybody needs to be informed what is going on in their day weather-related. No matter which activity they have to do, be well informed is a commodity</p>
         <h2>Persona 1</h2>
         <!--<img src= "images/domain.png" alt= "information about domain">-->
-        <p>start your day well inform with wheather, and news for the communities in Preston, Soda Spring, and Fish Haven. 
-        We know your necesities, and we want to serve you daily.</p>
+        <p>Ryan Roger, 55, father of four, Truck driver: “I drive for long hours every day. I am not used to all the technology these days, but I need to know the weather condition in my travel routes. I founded useful that  I can have all that information in the “palm of my hand”. It is fascinating how I can check it wherever I am, as long, of course, I don’t do it while I am driving”.</p>
         <h2>Persona 2</h2>
         <!--<img src= "images/domain.png" alt= "information about domain">-->
-        <p>start your day well inform with wheather, and news for the communities in Preston, Soda Spring, and Fish Haven. 
-        We know your necesities, and we want to serve you daily.</p>
+        <p>Raquel Diaz 26, single mother, Realtor: “My days start very early dropping my two years old son Jai in the daycare. I planned in  advance all the logistic and weather conditions for the appointments with my clients. It is always necessary to trust in reliable and accurate information that keeps me informed, and  I can check at home on my laptop, or in the way with my phone or tablet.”</p>
         <h3>1) Scenario</h3>
         <p>fasdkjfslkfjsfkjsfkjsal</p>
         <h3>2) Scenario</h3>
