upgrade typography and audience content

--- a/color-scheme.html
+++ b/color-scheme.html
@@ -50,7 +50,7 @@
 <!-- CONTENT HERE -->
     <main>
         <h2>Color Scheme</h2>
-        <p>The color I choose are the following:</p>
+        <p>The following table contain the palette color I choose to work with:</p>
         <img class="color1" src= "images/colorScheme.png" alt= "color chart">
         <p>I will used them in:</p>
         <img class="color2" src= "images/color-chart.png" alt= "table for colors">
