--- a/target-audience.html
+++ b/target-audience.html
@@ -52,28 +52,29 @@
         <h2>Target Audience</h2>
             <p>We want to reach users of all stratum, gender, and ages from 12 to 85+ years old.  From students to busy parents, informal workers to office employees. Everybody needs to be informed what is going on in their day weather-related. No matter which activity they have to do, be well informed is a commodity</p>
         <h3>Persona 1</h3>
-            <p>Ryan Roger, 55, father of four, Truck driver: “I drive for long hours every day. I am not used to all the technology these days, but I need to know the weather condition in my travel routes. I founded useful that  I can have all that information in the “palm of my hand”. It is fascinating how I can check it wherever I am, as long, of course, I don’t do it while I am driving”.</p>
+            <p>Ryan Roger, 55, father of four, Truck driver: <i>“I drive for long hours every day. I am not used to all the technology these days, but I need to know the weather condition in my travel routes. I founded useful that  I can have all that information in the “palm of my hand”. It is fascinating how I can check it wherever I am, as long, of course, I don’t do it while I am driving”.</i></p>
         <h3>Persona 2</h3>
-            <p>Raquel Diaz 26, single mother, Realtor: “My days start very early dropping my two years old son Jai in the daycare. I planned in  advance all the logistic and weather conditions for the appointments with my clients. It is always necessary to trust in reliable and accurate information that keeps me informed, and  I can check at home on my laptop, or in the way with my phone or tablet.”</p>
+            <p>Raquel Diaz 26, single mother, Realtor: <i>“My days start very early dropping my two years old son Jai in the daycare. I planned in  advance all the logistic and weather conditions for the appointments with my clients. It is always necessary to trust in reliable and accurate information that keeps me informed, and  I can check at home on my laptop, or in the way with my phone or tablet.”</i></p>
         <h3>1) Scenario</h3>
             <p><strong>How often the information is going to be updated?</strong></p>
-            <p>With the help of our professional team, the information will be updated accurately  24/7,  to serve you better.
+            <p>With the help of our professional team, the information will be updated accurately  24/7 to provide the service that our users deserve.
             </p>
         <h3>2) Scenario</h3>
-            <p><strong>How often the information is going to be updated?</strong></p>
-            <p>With the help of our professional team, the information will be updated accurately  24/7,  to serve you better.
+            <p><strong>What kind of news content will be published? It will expand to more communities or just for the ones you point now?
+            </strong></p>
+            <p>Mostly, local events. At the moment we will be working just with Preston, Soda Spring, and Fish Haven. We are local, we know our community. We are working to expand our services to nerby communities.
             </p>
         <h3>3) Scenario</h3>
-            <p><strong>How often the information is going to be updated?</strong></p>
-            <p>With the help of our professional team, the information will be updated accurately  24/7,  to serve you better.
+            <p><strong>Will you post traffic news as well?</strong></p>
+            <p>Yes, we think that is another handy information needed in our daily commute.  
             </p>
         <h3>4) Scenario</h3>
-            <p><strong>How often the information is going to be updated?</strong></p>
-            <p>With the help of our professional team, the information will be updated accurately  24/7,  to serve you better.
-            </p>
-        <h3>1) Scenario</h3>
-            <p><strong>How often the information is going to be updated?</strong></p>
-            <p>With the help of our professional team, the information will be updated accurately  24/7,  to serve you better.
+            <p><strong>Is there any fee to pay, it is a free or we must sign up to have acces?</strong></p>
+            <p>You can enjoy the freedom to navigate in our website, but also you have the convinience to join us to received notications for specific information that you require. 
+         </p>
+        <h3>5) Scenario</h3>
+            <p><strong>It would be good that your website promote tourism of those communities that are mentioned, don't you think?</strong></p>
+            <p>Of course. It is an excelent idea. Thank you. We apreciate your feedback to helps us to improve our website.
             </p>
         
     </main>
