--- a/typography.html
+++ b/typography.html
@@ -50,8 +50,8 @@
 <!-- CONTENT HERE -->
     <main>
         <h2>Typography</h2>
-        <p>Our main purpose is to help you to start your day well inform with wheather, and news for the communities in Preston, Soda Spring, and Fish Haven. 
-        We know your necesities, and we want to serve you daily.</p>
+        <p>These are the different typefaces to use in this website.</p>
+        <img class="typetable" src="images/font-chart.png" alt= "table of typography to be use">
     </main>
     
 <!-- FOOTER HERE -->   
