--- a/color-scheme.html
+++ b/color-scheme.html
@@ -13,7 +13,7 @@
 
 
 <!-- Font Style -->
-<link href="https://fonts.googleapis.com/css?family=Fira+Sans|McLaren|Oswald&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Fira+Sans%7CMcLaren%7COswald&display=swap" rel="stylesheet">
 <!-- STYLE SHEETS -->
 <link href="css/normalize.css" rel="stylesheet">
 <!-- phone-default -->
