--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <!-- FOOTER HERE -->   
     <footer>
         &copy; 2020 | Delfina Moncayo | <br/><span>Last Updated:
-            <script> document.write( updateCurrentDate() ); </script></span>
+            <script> document.write( updateCurrentDate() ) </script></span>
     </footer>
 
 </body>
